static/style.css
/* inclusive-sans-regular - latin */
@font-face {
  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
  font-family: 'Inclusive Sans';
  font-style: normal;
  font-weight: 400;
  src: url('/static/fonts/inclusive-sans-v1-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
}

/* inclusive-sans-italic - latin */
@font-face {
  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
  font-family: 'Inclusive Sans';
  font-style: italic;
  font-weight: 400;
  src: url('/static/fonts/inclusive-sans-v1-latin-italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
}

.d-nojs-none {
	display: none;
}

.ritole {
	unicode-bidi: bidi-override;
	direction: rtl;
}

* {
	font-family: "Inclusive Sans", sans-serif;
	hyphens: auto;
	overflow-wrap: break-word;
}

/* https://payalord.github.io/xZoom/docs/index.html#usefultips */

.xzoom-gallery {
	margin-left: 0 !important;
	margin-bottom: 0 !important;
	max-height: 6em;
}

/* toggle navbar without javascript */
input.toggler {
	display: none;
}
.close {
	display: none;
}
:is(input.toggler:checked, input.toggler:target) ~ div.collapse {
	display: block;
}
:is(input.toggler:checked, input.toggler:target) ~ .open {
	display: none;
}
:is(input.toggler:checked, input.toggler:target) ~ * .open {
	display: none;
}
:is(input.toggler:checked, input.toggler:target) ~ .close {
	display: block;
}
:is(input.toggler:checked, input.toggler:target) ~ * .close {
	display: block;
}

.nav-active {
	background-color: #e7e7e7;
	border-bottom: solid black 2px;
}

/* from util.html */
.selected-category {
	font-weight: bold;
}

/* footer flex-grow  */
html, body {
	height: 100%;
}
body {
	display: flex;
	flex-flow: column;
}
footer {
	flex-grow: 1;

	background-color: #f8f9fa;
	font-size: small;
	margin-top: 2em;
	padding: 2em 0.75em 0.75em 0.75em;
}

footer ul {
	padding-left: 0;
}

footer li {
	list-style-type: none;
	padding-bottom: 0.33em;
}

/* links */
a {
	text-decoration: none;
}

/* style all blockquotes independently from bootstrap */
blockquote {
	border-left: solid 5px #d0d0d0;
	font-style: italic;
	padding-left: 0.5em;
}

/* make all images responsive */
img {
	max-width: 100%;
	height: auto;
}

/* headings */
h3 { font-size: 1.4rem; }
h4 { font-size: 1.2rem; }
h5 { font-size: 1rem; }

pre {
	background-color: #f2f2f2;
	border-radius: 0.375rem;
	padding: 0.6em 0.8em;
}

/* scroll shadows */

.list-group-item {
	background: none; /* else it covers the scroll shadows */
}

.scroll-shadows {
	animation-name: scroll-shadow-inset;
	animation-timeline: scroll(self block);
	animation-timing-function: linear;
}

@keyframes scroll-shadow-inset {
	from { box-shadow: inset -10px -10px 15px 0px rgba(0, 0, 0, 0.33); }
	to { box-shadow: inset -10px 10px 15px 0px rgba(0, 0, 0, 0.33); }
}

